--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About Me
 description: This is what I do.
-background: '/img/bg-about.jpg'
+background: '/img/bg-about.png'
 ---
 
 <p>I work as a Server Engineer for mobile games, focusing on building efficient systems and improving performance. I enjoy learning, creating tools to simplify work, and sharing knowledge. My goal is to stay disciplined and set a good example for my kids.</p>
